# intervallum

./: .pre-commit-config.yaml  .travis.yml  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build-test.yaml  lint.yaml
src/libinterval/: interval.rs  interval_set.rs  lib.rs  ops.rs  prelude.rs  set_operations.rs
src/libinterval/ncollections/: bit_set.rs  btree_set.rs  enum_set.rs  hash_set.rs  macros.rs  mod.rs  ops.rs  option.rs  optional.rs  primitives.rs
