[package]

name = "intervallum"
version = "1.4.4"
authors = [ "Pierre Talbot <pierre.talbot@uni.lu>" ]

description = "Generic interval and interval set library."
documentation = "https://docs.rs/intervallum/1.4.4/interval/"
repository = "https://github.com/ptal/intervallum"
readme = "README.md"
keywords = ["interval", "math", "data-structure", "containers", "interval-set"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]

name = "interval"
path = "src/libinterval/lib.rs"

[dependencies]

num-integer = "0.1.46"
num-traits = "0.2.19"
bit-set = "0.8.0"
gcollections = "1.5.0"
trilean = "1.1.0"
serde = "1.0.219"

[dev-dependencies]
serde_test = "1.0.177"
